pushing class code

--- a/media-queries/index.html
+++ b/media-queries/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <h1>Media Queries!</h1>
+        <h2>I will hide upon screen getting bigger than 1068px</h2>
+        <button>X</button>
+    </div>
 </body>
 </html>
