--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Class Code</title>
     <link rel="stylesheet" href="./style.css">
-    <title>Responsive Grid</title>
 </head>
 <body>
     <div class="container">
         <header></header>
         <div id="main">
             <aside>
+                <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
